# compiler-frontend

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  vcpkg.json
inc/args/: parsing.h
inc/codegen/: codegen.h  linker.h  software.h
inc/codegen/type/: convert_type_to_varianttype.h  convert_varianttype_to_size.h  function.h  variant.h
inc/linker/: gen_linker.h  linker.h  software.h
inc/linker/type/: convert_type_to_varianttype.h  convert_varianttype_to_size.h  function.h  variant.h
inc/tokenizer/: token.h  tokenizer.h
scripts/: compiler-buid.sh  compiler.sh  unittest.dockerfile  unittest.sh
src/: main.cpp
src/args/: parser.cpp
src/codegen/: gen_linker.cpp
src/linker/: gen_linker.cpp
src/tokenizer/: tokenizer.cpp
tests/cmakes/: linker.cmake  tokenizer.cmake
tests/linker/: linker.cpp  linker_file.cpp  size.cpp
tests/tokenizer/: comments.cpp  get_str.cpp
